# calculator

./: CMakeLists.txt  main.cpp
stack/: CMakeLists.txt  SimplexNode.cpp  SimplexNode.h  Stack.cpp  Stack.h
token/: AbstractToken.cpp  AbstractToken.h  CMakeLists.txt  Token.cpp  Token.h  TokenType.cpp  TokenType.h
token/function/: CMakeLists.txt  FunctionToken.cpp  FunctionToken.h
token/number/: CMakeLists.txt  NumericToken.cpp  NumericToken.h
token/operator/: AdvancedOperatorToken.h  CMakeLists.txt  OperatorToken.cpp  OperatorToken.h  SimpleOperatorToken.h
token/parenthesis/: CMakeLists.txt  ClosedParenthesis.h  OpenParenthesis.h  Parenthesis.cpp  Parenthesis.h
